# POE2_HTC

./: .classpath  .editorconfig  .env.example  .gitignore  .project  .vercelignore  ALGORITHM.md  API_EXAMPLES.md  AUTO_UPDATE_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOWNLOAD.md  FRONTEND_REVAMP_SUMMARY.md  License  MIGRATION_GUIDE.md  Notes.txt  PRODUCTION_READINESS.md  README.md  baseline_metrics.txt  build-windows.sh  check-duplicates.sh  debug_modifiers.html  index.html  package-lock.json  package.json  pom.xml  release-notes-0.9.7.md  restart-server.sh  start-wsl.bat  start.bat  start.sh  tailwind.config.js  test-api.sh  test-frontend-api.html  test-threshold.sh  test_6mods.sh  test_crafting_debug.sh  test_exact_mods.sh  test_threshold.sh  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ABOUT.md  AUTO_UPDATE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  DOWNLOAD.md  LAUNCHER.md  SECURITY.md  SLOW_REQUEST_MONITORING.md  USER_GUIDE.md
electron/: main.ts  preload.js  preload.ts  tsconfig.json
poe2-ui/: index.html  package-lock.json  package.json
poe2-wasm-engine/: .gitignore  BUILD_WASM.md  README.md  index.html  main.js  package-lock.json  package.json  simple.html  test-item.html  test.html  test_browser.js  test_item_details.sh  test_simple.js  working-test.html
public/: robots.txt  sitemap.xml
release/: POE2HTC Setup 0.4.0.exe.blockmap  latest.yml
scripts/: java_to_c_converter.py  (+1 more)
wasm/: CMakeLists.txt  Makefile
wasm/core/: calculator.c  item_mod_lookup.c  item_mod_lookup.h  items.h  items_data.c  items_data.h  modifiers.h  modifiers_data.c  modifiers_data.h  probability.c  probability.h  tags.h
wasm/memory/: allocator.c  cache.h
wasm/threading/: thread_pool.c
(+837 files in other folders)
